fixed logo stretching on chrome

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ footer {
   margin: 0;
   padding: 0;
   height: 100px;
+  width: auto;
 }
 
 .logo_name {
